--- a/local_storage/index.html
+++ b/local_storage/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-   <!-- local storage -->
+  </head>
+  <body>
+    <!-- local storage -->
+    
 
-    Enter name <input type="text" id="nm">
+    Enter name <input type="text" id="nm" /> <br>
+      Enter email <input type="text" id="mail" /> <br>
     <button onclick="datasave()">click</button>
-    <script src="/script.js"></script>
+    
 
-</body>
+    <script src="/script.js"></script>
+  </body>
 </html>
