--- a/password_generator/index.html
+++ b/password_generator/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-       
+       <button id="btn1">click</button>
+       <h1 id="demo">your password</h1>
     <script src="/script.js"></script>
 </body>
 </html>
