--- a/crud_1/index.html
+++ b/crud_1/index.html
@@ -6,9 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
-         <button onclick="display()">click here</button>
-            <h1 id="demo"></h1>
-     <script src="/script.js"></script>
+          <a href="/datasave.html"></a>
+
+    <script src="/datasave.js"></script>
 </body>
 </html>
